correction accessibilité contrast entre texte et background wcag

--- a/new-project/style.css
+++ b/new-project/style.css
@@ -486,6 +486,10 @@ button {
 .sm-shadow {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 }
+cite{
+    color:#575757;
+    font-weight: bolder;
+}
 
 .panel-sq,
 .panel-sq .panel-heading,
@@ -651,7 +655,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
 
 .container {
@@ -707,7 +711,10 @@ cite::before{
     font-size: 16px;
     font-weight: 700;
 }
-
+#access-font{
+    color: #414141;
+    font-weight: 900;
+}
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
